test/ModuleInterface/verify-module-interfaces.code
// RUN: %empty-directory(%t)

// Check that verification won't reject a valid interface:
// RUN: %target-build-language -emit-library -enable-library-evolution -emit-module-interface -emit-module -language-version 5 -o %t/MyModule.o -verify-emitted-module-interface -module-name MyModule %s

// Check that verification will reject an invalid interface:
// RUN: not %target-build-language -emit-library -enable-library-evolution -emit-module-interface -emit-module -language-version 5 -o %t/MyModule.o -verify-emitted-module-interface -module-name MyModule -Xfrontend -debug-emit-invalid-languageinterface-syntax %s 2>&1 | %FileCheck %s

// ...but not if verification is off.
// RUN: %target-build-language -emit-library -enable-library-evolution -emit-module-interface -emit-module -language-version 5 -o %t/MyModule.o -no-verify-emitted-module-interface -module-name MyModule -Xfrontend -debug-emit-invalid-languageinterface-syntax %s

public struct MyStruct {}

// CHECK: MyModule.codeinterface:{{[0-9]+}}:{{[0-9]+}}: error: no macro named '__debug_emit_invalid_languageinterface_syntax__'
// CHECK: MyModule.codeinterface:{{[0-9]+}}:{{[0-9]+}}: error: failed to verify module interface of 'MyModule' due to the errors above; the textual interface may be broken by project issues or a compiler bug
